[Build] enh: core compile with scala3